# AIGI-Holmes

./: .gitignore  README.md
Baselines_AIGI/: CONFIG_SYSTEM_SUMMARY.md  README.md  README_CONFIG.md  config.yaml  config_example.yaml  config_loader.py  convert_weight2hf_config.py  quick_start.sh  requirements.txt  requirements_config.txt  test_huggingface.py  train_with_config.py  transform_vision_model_config.py  validate.py
Baselines_AIGI/data/: __init__.py  datasets.py
logits-processor-zoo/: .coveragerc  .gitignore  pyproject.toml
logits-processor-zoo/.github/workflows/: python-app.yml
logits-processor-zoo/example_notebooks/trtllm/: cite_prompt_logits_processor.py  gen_length_logits_processor.py  last_phrase_logits_processor.py  multiple_choice_logits_processor.py  utils.py
logits-processor-zoo/example_notebooks/vllm/: cite_prompt_logits_processor.ipynb  force_last_phrase_logits_processor.ipynb  gen_length_logits_processor.ipynb  multiple_choice_logits_processor.ipynb  trigger_phrase_logits_processor.ipynb  utils.py
logits-processor-zoo/logits_processor_zoo/: utils.py
logits-processor-zoo/logits_processor_zoo/trtllm/: __init__.py  cite_prompt.py  generation_length.py  last_phrase.py  multiple_choice.py
logits-processor-zoo/logits_processor_zoo/vllm/: __init__.py  cite_prompt.py  generation_length.py  last_phrase.py  multiple_choice.py  myprocessor.py  myprocessor1.py  trigger_phrase.py
logits-processor-zoo/tests/: conftest.py  test_utils.py
multi-node/: test_scr.py  test_scrnode1.sh  test_scrnode2.sh  train_node1.sh  train_node2.sh  train_node3.sh
(+16 files in other folders)
